@@ -8,6 +8,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed that setting exact item amounts on a recipe would not calculate the percentage correctly in some cases
     - Fixed that negative fluid temperatures would lead to a crash when starting/loading a map
+    - Fixed productivity applying to the rocket silo satellite even though it shouldn't
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.35
